nginxdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app : ng
spec:
  replicas: 2
  selector:
    matchLabels:
      app : ng
  template:
    metadata:
      labels:
        app : ng
    spec:
      containers:
      - name: nginx-container
        image: nginx
        ports:
        - containerPort:  80
