nodedeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
  labels:
    app : node
spec:
  replicas: 2
  selector:
    matchLabels:
      app : node
  template:
    metadata:
      labels:
        app : node
    spec:
      containers:
      - name: node-app-mera
        image: pratikkumar378/nodeapp
        ports:
        - containerPort:  8000
