nginxservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxservice
spec:
  type: ClusterIP
  selector:
    app: ng
  ports:
  - port: 4000
    name: http
    targetPort: 80
