nodeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeservice
spec:
  type: ClusterIP
  selector:
    app: node
  ports:
  - port: 3000
    name: http
    targetPort: 8000
