appingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: zomato-demo.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nodeservice
            port: 
              number: 3000
  - host: nginx-demo.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginxservice
            port: 
              number: 4000
